small fixes to labels and spacing logo

--- a/assets/dashboard.css
+++ b/assets/dashboard.css
@@ -9,6 +9,11 @@ html {
     margin: 0;
 }
 
+.toggle label{
+    font-size:0.8rem;
+    margin:0;
+}
+
 #menu-bar {
     /* height:9vh;
     padding:1vh 0;
@@ -22,7 +27,8 @@ html {
 }
 
 #logo img {
-    height: 7vh;
+    height: 6vh;
+    margin: 0.5vh;
 }
 
 #main-content {
